Alter .green to fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,8 +105,8 @@ footer {
 
 .green {
   background-color: green;
-  left: 141px;
-  bottom: 249px;
+  left: 142px;
+  bottom: 248px;
 }
 
 /* center interface */
